feat: improve stock news quality