@@ -8,6 +8,7 @@ import com.sun.net.httpserver.HttpServer;
 import java.net.InetSocketAddress;
 import java.net.http.HttpClient;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -33,25 +34,42 @@ class SinaStockNewsClientTest {
   void parsesSinaStockNewsHtml() {
     String raw = """
         <div class="datelist"><ul>
-        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;17:20&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/news1.shtml'>14只白酒股下跌 贵州茅台重回1200元/股</a> <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;15:05&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/news2.shtml'>贵州茅台涨0.84%，成交额61.22亿元</a> <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;17:20&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/news1.shtml'>Market Update One</a> <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;15:05&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/news2.shtml'>Market Update Two</a> <br>
         </ul></div>
         """;
 
     List<StockNewsItem> news = SinaStockNewsClient.parseNews(raw, 1);
 
     assertThat(news).hasSize(1);
-    assertThat(news.get(0).title()).isEqualTo("14只白酒股下跌 贵州茅台重回1200元/股");
-    assertThat(news.get(0).url()).isEqualTo("https://finance.sina.com.cn/news1.shtml");
-    assertThat(news.get(0).publishedAt()).hasToString("2026-07-02T17:20");
-    assertThat(news.get(0).source()).isEqualTo("Sina Finance");
+    assertThat(news.getFirst().title()).isEqualTo("Market Update One");
+    assertThat(news.getFirst().url()).isEqualTo("https://finance.sina.com.cn/news1.shtml");
+    assertThat(news.getFirst().publishedAt()).hasToString("2026-07-02T17:20");
+    assertThat(news.getFirst().source()).isEqualTo("Sina Finance");
+  }
+
+  @Test
+  void deduplicatesAndSortsNewsBeforeApplyingLimit() {
+    String raw = """
+        <div class="datelist"><ul>
+        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-01&nbsp;09:30&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/older.shtml'>Older Market Update</a> <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;17:20&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/newer.shtml'>Newer Market Update</a> <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;17:21&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/newer-copy.shtml'>  Newer   Market Update </a> <br>
+        </ul></div>
+        """;
+
+    List<StockNewsItem> news = SinaStockNewsClient.parseNews(raw, 2);
+
+    assertThat(news)
+        .extracting(StockNewsItem::title)
+        .containsExactly("Newer Market Update", "Older Market Update");
   }
 
   @Test
   void fetchesRecentNewsFromHttpEndpoint() {
     String raw = """
         <div class="datelist"><ul>
-        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;17:20&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/news1.shtml'>贵州茅台新闻</a> <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;17:20&nbsp;&nbsp;<a target='_blank' href='https://finance.sina.com.cn/news1.shtml'>Market Article</a> <br>
         </ul></div>
         """;
     server.createContext("/", exchange -> {
@@ -68,6 +86,78 @@ class SinaStockNewsClientTest {
     List<StockNewsItem> news = client.getRecentNews(new StockSymbol("600519", "SH"), 5);
 
     assertThat(news).singleElement()
-        .satisfies(item -> assertThat(item.title()).isEqualTo("贵州茅台新闻"));
+        .satisfies(item -> assertThat(item.title()).isEqualTo("Market Article"));
+  }
+
+  @Test
+  void enrichesNewsWithArticleSummary() {
+    String port = String.valueOf(server.getAddress().getPort());
+    String articleUrl = "http://127.0.0.1:" + port + "/article/news1.shtml";
+    String raw = """
+        <div class="datelist"><ul>
+        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;17:20&nbsp;&nbsp;<a target='_blank' href='%s'>Market Article</a> <br>
+        </ul></div>
+        """.formatted(articleUrl);
+    String article = """
+        <html><body>
+        <div id="artibody">
+          <p>Company revenue growth stayed resilient while sector demand recovered.</p>
+          <p>Management said it will keep channel inventory stable.</p>
+        </div>
+        </body></html>
+        """;
+    server.createContext("/news/sh600519.phtml", exchange -> {
+      byte[] body = raw.getBytes(Charset.forName("GB18030"));
+      exchange.getResponseHeaders().add("Content-Type", "text/html; charset=gb2312");
+      exchange.sendResponseHeaders(200, body.length);
+      exchange.getResponseBody().write(body);
+      exchange.close();
+    });
+    server.createContext("/article/news1.shtml", exchange -> {
+      byte[] body = article.getBytes(StandardCharsets.UTF_8);
+      exchange.getResponseHeaders().add("Content-Type", "text/html; charset=utf-8");
+      exchange.sendResponseHeaders(200, body.length);
+      exchange.getResponseBody().write(body);
+      exchange.close();
+    });
+    server.start();
+    String baseUrl = "http://127.0.0.1:" + port + "/news/";
+    SinaStockNewsClient client = new SinaStockNewsClient(HttpClient.newHttpClient(), baseUrl);
+
+    List<StockNewsItem> news = client.getRecentNews(new StockSymbol("600519", "SH"), 5);
+
+    assertThat(news).singleElement()
+        .satisfies(item -> assertThat(item.summary())
+            .contains("Company revenue growth stayed resilient")
+            .contains("channel inventory stable"));
+  }
+
+  @Test
+  void keepsTitleOnlyNewsWhenArticleFetchFails() {
+    String port = String.valueOf(server.getAddress().getPort());
+    String articleUrl = "http://127.0.0.1:" + port + "/article/missing.shtml";
+    String raw = """
+        <div class="datelist"><ul>
+        &nbsp;&nbsp;&nbsp;&nbsp;2026-07-02&nbsp;17:20&nbsp;&nbsp;<a target='_blank' href='%s'>Market Article</a> <br>
+        </ul></div>
+        """.formatted(articleUrl);
+    server.createContext("/news/sh600519.phtml", exchange -> {
+      byte[] body = raw.getBytes(Charset.forName("GB18030"));
+      exchange.getResponseHeaders().add("Content-Type", "text/html; charset=gb2312");
+      exchange.sendResponseHeaders(200, body.length);
+      exchange.getResponseBody().write(body);
+      exchange.close();
+    });
+    server.start();
+    String baseUrl = "http://127.0.0.1:" + port + "/news/";
+    SinaStockNewsClient client = new SinaStockNewsClient(HttpClient.newHttpClient(), baseUrl);
+
+    List<StockNewsItem> news = client.getRecentNews(new StockSymbol("600519", "SH"), 5);
+
+    assertThat(news).singleElement()
+        .satisfies(item -> {
+          assertThat(item.title()).isEqualTo("Market Article");
+          assertThat(item.summary()).isEmpty();
+        });
   }
 }
